--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>
-    TechMatys - PMS
+    TechMatys
   </title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
